--- a/main.ipynb
+++ b/main.ipynb
@@ -60,16 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rock (0), Paper (1), Scissors(2), Quit(else) ? 1\n",
-      "Paper (Player) VS Rock (Computer)\n",
+      "Rock (0), Paper (1), Scissors(2), Quit(else) ? 2\n",
+      "Scissors (Player) VS Paper (Computer)\n",
       "Win\n",
+      "Rock (0), Paper (1), Scissors(2), Quit(else) ? 1\n",
+      "Paper (Player) VS Paper (Computer)\n",
+      "Draw\n",
       "Rock (0), Paper (1), Scissors(2), Quit(else) ? 3\n"
      ]
     }
